--- a/Вариант 2 Галиулин Марат.ipynb
+++ b/Вариант 2 Галиулин Марат.ipynb
@@ -607,12 +607,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols = [x for x in adult_df.columns if x != '>50K,<=50K']\n",
-    "cols_for_dummies = ['workclass', 'education', 'marital-status', 'occupation', 'relationship', 'race', 'sex', 'age_groups']"
+    "cols_for_dummies = ['workclass', 'education', 'education-num', 'marital-status', 'occupation', 'relationship', 'race', 'sex', 'age_groups']"
    ]
   },
   {
@@ -1321,6 +1321,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1399,7 +1404,7 @@
     "fig, ax = plt.subplots(nrows=2, figsize=(16, 9))\n",
     "\n",
     "sns.boxplot(x=rf_fit_time, ax=ax[0])\n",
-    "ax[0].set_title('AdaBoost fit time')\n",
+    "ax[0].set_title('RandomForest fit time')\n",
     "ax[0].set_xlim(0, XLIM)\n",
     "\n",
     "sns.boxplot(x=dt_fit_time, ax=ax[1])\n",
@@ -1407,7 +1412,7 @@
     "ax[1].set_xlim(0, XLIM)\n",
     "\n",
     "plt.show()\n",
-    "print(f'\\RandomForest fit time mean: {rf_fit_time.mean():.4f}')\n",
+    "print(f'RandomForest fit time mean: {rf_fit_time.mean():.4f}')\n",
     "print(f'DecisionTree fit time mean: {dt_fit_time.mean():.4f}')"
    ]
   },
@@ -1415,7 +1420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Время работы RandomForestClassifier намного превышает таковое у DecisionTreeClassifier\n",
+    "1) Время работы RandomForestClassifier превышает таковое у DecisionTreeClassifier\n",
     "\n",
     "2) Точность предсказаний выше у RandomForestClassifier\n",
     "\n",
